--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,61 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header {
+  grid-area: h;
+  background-color: rgb(147, 186, 147);
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.likeCount {
+  margin: 10px 40px 10px 60px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.comment {
+  margin: 10px;
 }
+
+.app-wrapper-content {
+  grid-area: c;
+  background-color: cornflowerblue;
+}
+.nav {
+  grid-area: n;
+  background-color: burlywood;
+}
+
+.nav a {
+  text-decoration: none;
+  color: black;
+  cursor: pointer;
+  padding: 30px 20px;
+}
+.btn {
+  border-radius: 18px;
+  background-color: aquamarine;
+}
+.description {
+  padding: 10px;
+}
+.app-wrapper-content img {
+  width: 1000px;
+  height: 300px;
+}
+.search img {
+  width: 20px;
+  border-radius: 30%;
+  margin: 0 10px;
+}
+
+.search input {
+  margin-right: 20px;
+}
+.logotip {
+  width: 80px;
+}
+
+
+
+
+
+
+
